(fix) nav items centering small screens + scrollbar

--- a/src/components/navigation/DropdownNavigationItem/DropdownNavigationItem.scss
+++ b/src/components/navigation/DropdownNavigationItem/DropdownNavigationItem.scss
@@ -271,7 +271,7 @@
                     text-align: center;
                     flex: 1;
                     justify-content: center;
-                    padding-left: var(--spacing-4xl) ;
+                    padding: var(--spacing-md) 0 var(--spacing-md) var(--spacing-4xl) ;
                 }
             }
         }
